# agentic-tictactoe

./: .gitignore  AGENTS.md  README.md  ai.py  game.py  game_utils.py  main.py  pyproject.toml  test_ai.py
static/css/: style.css
templates/: index.html  mode_select.html
