[project]
name = "agentic-tictactoe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
]
